--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio</title>
+    <title>Abhishek Raj Singh | Software engineer</title>
+    <meta
+      name="description"
+      content="Portfolio of Abhishek Raj Singh a software engineer, showcasing web and Android development projects, skills, and contact information."
+    />
+    <meta name="keywords" content="Abhishek Raj Singh, Frontend developer, SOftware engineer" />
+    
+    <!-- Open Graph / Social preview -->
+    <meta property="og:title" content="Abhishek Raj Singh | Software engineer" />
+    <meta property="og:description" content="Portfolio of Abhishek Raj Singh showcasing projects and skills." />
+    <meta property="og:image" content="/images/portfolio_cover.png" />
+    <meta property="og:url" content="https://www.abhishekrajsingh.com.np/" />
+    <meta name="twitter:card" content="/images/portfolio_cover.png" />
+    
+    <link rel="canonical" href="https://www.abhishekrajsingh.com.np/" />
   </head>
   <body>
     <div id="root"></div>
